--- a/src/modules/casino-nav-reskin/casino-nav-reskin.scss
+++ b/src/modules/casino-nav-reskin/casino-nav-reskin.scss
@@ -530,6 +530,10 @@
     padding: 8px 16px 6px !important;
   }
 
+  .casino-navigation-menu__list {
+    gap: 20px !important;
+  }
+
   .casino-navigation-menu__item {
     min-width: 64px !important;
     padding: 6px 4px !important;
